Fixed PUBMAN-1151: separate search for files and locators

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -197,6 +197,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Beitragender
 
 ENUM_CREATORROLE_EDITOR = Herausgeber
 
+ENUM_CREATORROLE_HONOREE = geehrte Person/Institution
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Maler
@@ -208,8 +210,6 @@ ENUM_CREATORROLE_REFEREE = Begutachter
 ENUM_CREATORROLE_TRANSCRIBER = Transkribierer
 
 ENUM_CREATORROLE_TRANSLATOR = \u00DCbersetzer
-
-ENUM_CREATORROLE_HONOREE = geehrte Person/Institution
 
 ENUM_CREATORTYPE_ORGANIZATION = Organisation
 
@@ -265,24 +265,76 @@ ENUM_EMPTY = kein Eintrag
 #
 # Genre Types
 #
-
 ENUM_GENRE_ARTICLE = Zeitschriftenartikel
 
 ENUM_GENRE_BOOK = Buch
 
 ENUM_GENRE_BOOK_ITEM = Buchkapitel
 
+# kind of Journal Article, source Journal
+ENUM_GENRE_BOOK_REVIEW = Rezension
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_STUDY = Fallbesprechung 
+
+ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
+
+ENUM_GENRE_COMMENTARY = Kommentar 
+
 ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
 
 ENUM_GENRE_CONFERENCE_REPORT = Konferenzbericht
 
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
+
+# kind of Book, source Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
+
 ENUM_GENRE_COURSEWARE_LECTURE = Lehrmaterial
+
+# kind of Journal Article, source Journal, Book
+ENUM_GENRE_EDITORIAL = Editorial
+
+ENUM_GENRE_ENCYCLOPEDIA = Lexikon
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_HANDBOOK = Handbuch
 
 ENUM_GENRE_ISSUE = Sonderheft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
+
+#
+# Jus-specific Source genres
+#
+ENUM_GENRE_MONOGRAPH = Monografie
+
+ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
+
+ENUM_GENRE_NEWSPAPER = Zeitung
+
+#Jus-specific genre types BEGIN
+# source Newspaper
+ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
+
+# kind of Journal Article, source Journal or without source, can be published on a webpage
+ENUM_GENRE_OPINION = Stellungnahme
 
 ENUM_GENRE_OTHER = Sonstige
 
@@ -300,66 +352,9 @@ ENUM_GENRE_TALK_AT_EVENT = Vortrag
 
 ENUM_GENRE_THESIS = Hochschulschrift
 
-#Jus-specific genre types BEGIN
-
-# source Newspaper
-ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_STUDY = Fallbesprechung 
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_BOOK_REVIEW = Rezension
-
-# kind of Journal Article, source Journal or without source, can be published on a webpage
-ENUM_GENRE_OPINION = Stellungnahme
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
-
-# kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
-
-# kind of Journal Article, source Journal, Book
-ENUM_GENRE_EDITORIAL = Editorial
-
-#
-# Jus-specific Source genres
-#
-ENUM_GENRE_MONOGRAPH = Monografie
-
-ENUM_GENRE_NEWSPAPER = Zeitung
-
-ENUM_GENRE_ENCYCLOPEDIA = Lexikon
-
-ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
-
-ENUM_GENRE_COMMENTARY = Kommentar 
-
-ENUM_GENRE_HANDBOOK = Handbuch
-
-ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
-
-ENUM_GENRE_FESTSCHRIFT = Festschrift
-
-source_identifier_type = Art des Identifier
-
-source_identifier_value = Wert des Identifier
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
-
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
@@ -452,9 +447,13 @@ ENUM_REVIEWMETHOD_NO_REVIEW = keine Begutachtung
 
 ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Datei(en)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = mit Dateien oder ext. Ref.
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = ohne Datei(en)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = mit Datei(en)
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = mit ext. Ref.
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = ohne Dateien und ext. Ref.
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = privat
 
@@ -713,6 +712,11 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
+# JUS - Export-Format
+Export_ExportFormat_JUS = JUS
+
+Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
+
 Export_FileFormat_HTML = HTML
 
 Export_FileFormat_ODT = ODT
@@ -722,11 +726,6 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
-
-Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
-
-# JUS - Export-Format
-Export_ExportFormat_JUS = JUS
 
 Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisation
 
@@ -947,6 +946,8 @@ ViewItemFull_btnItemVersions = Freigabegeschichte
 
 ViewItemFull_lblAbstract = Abstract
 
+ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
+
 ViewItemFull_lblAddToBasket = Zum Basket hinzuf\u00FCgen
 
 ViewItemFull_lblAffiliations = Affiliations
@@ -1045,6 +1046,16 @@ ViewItemFull_lblLanguages = Sprache(n)
 
 ViewItemFull_lblLastModified = Zuletzt ge\u00E4ndert
 
+ViewItemFull_lblLegalCaseCourtName = Gericht
+
+ViewItemFull_lblLegalCaseCourtNameIdDate = Gericht, Datum, AZ
+
+ViewItemFull_lblLegalCaseDatePublished = Datum
+
+ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen
+
+ViewItemFull_lblLegalCaseTitle = Titel
+
 ViewItemFull_lblLinkSection = Details zum Datensatz
 
 ViewItemFull_lblLocatorContentCategory = Art des Inhalts
@@ -1117,6 +1128,8 @@ ViewItemFull_lblSubHeaderFile = Dateien
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
+
+ViewItemFull_lblSubHeaderLegalCase = Entscheidung
 
 ViewItemFull_lblSubHeaderLocalTags = lokale Tags
 
@@ -1490,27 +1503,8 @@ ViewLocalTagsPage = lokaler Tag
 WithdrawItemPage = Datensatz zur\u00FCckziehen
 
 #
-# JUS-specific labels BEGIN
-#
-ViewItemFull_lblSubHeaderLegalCase = Entscheidung
-
-ViewItemFull_lblLegalCaseTitle = Titel
-
-ViewItemFull_lblLegalCaseCourtName = Gericht
-
-ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen
-
-ViewItemFull_lblLegalCaseDatePublished = Datum
-
-ViewItemFull_lblLegalCaseCourtNameIdDate = Gericht, Datum, AZ
-
-ViewItemFull_lblSubHeaderLegalCase = Entscheidung
-
-ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
-#
 # JUS-specific labels END
 #
-
 #
 # Withdraw
 #
@@ -1968,16 +1962,7 @@ event_start-date = Beginndatum
 event_title = Titel
 
 event_title_alternative = Alternativer Titel
-#
-# JUS-specific labels BEGIN
-#
-legal_case_title = Titel
 
-legal_case_identifier = Aktenzeichen
-
-legal_case_date_published = Datum
-
-legal_case_court_name = Gericht
 #
 # JUS-specific labels END
 #
@@ -2007,10 +1992,7 @@ g_creator_person_organization = Personen & Organisationen
 g_details = Details
 
 g_events = Veranstaltung
-#
-# JUS-specific labels BEGIN
-#
-g_legal_case = Entscheidung
+
 #
 # JUS-specific labels END
 #
@@ -2021,6 +2003,11 @@ g_identifiers = Identifier
 g_item_basic = Basisdaten
 
 g_item_degree = Art des Abschlusses
+
+#
+# JUS-specific labels BEGIN
+#
+g_legal_case = Entscheidung
 
 g_locators = externe Referenz
 
@@ -2106,6 +2093,17 @@ item_title_alternative = Alternativer Titel
 item_total-number-of-pages = Gesamtseitenzahl
 
 lbl_noEntry = -
+
+legal_case_court_name = Gericht
+
+legal_case_date_published = Datum
+
+legal_case_identifier = Aktenzeichen
+
+#
+# JUS-specific labels BEGIN
+#
+legal_case_title = Titel
 
 locator_component_visibility = Sichtbarkeit
 
@@ -2245,6 +2243,10 @@ source_end-page = Endseite
 
 source_genre = Genre
 
+source_identifier_type = Art des Identifier
+
+source_identifier_value = Wert des Identifier
+
 source_issue = Heftnummer
 
 source_sequence_number = Sequence Number
@@ -2331,6 +2333,3 @@ viewItemFullPage = Datensatz ansehen
 warning_lblMessageHeader = Systemnachrichten und Warnungen:
 
 yes = Ja
-
-ENUM_IDENTIFIERTYPE_ = n.a.
-
