--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -196,6 +196,8 @@ ENUM_CREATORROLE_CONTRIBUTOR = Contributor
 
 ENUM_CREATORROLE_EDITOR = Editor
 
+ENUM_CREATORROLE_HONOREE = Honoree
+
 ENUM_CREATORROLE_ILLUSTRATOR = Illustrator
 
 ENUM_CREATORROLE_PAINTER = Painter
@@ -205,8 +207,6 @@ ENUM_CREATORROLE_PHOTOGRAPHER = Photographer
 ENUM_CREATORROLE_REFEREE = Referee
 
 ENUM_CREATORROLE_TRANSCRIBER = Transcriber
-
-ENUM_CREATORROLE_HONOREE = Honoree
 
 ENUM_CREATORROLE_TRANSLATOR = Translator
 
@@ -260,27 +260,80 @@ ENUM_DEGREETYPE_PHD = PHD
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
 ENUM_EMPTY = no entry
+
 #
 # Genre Types
 #
-
 ENUM_GENRE_ARTICLE = Journal Article
 
 ENUM_GENRE_BOOK = Book
 
 ENUM_GENRE_BOOK_ITEM = Book Chapter
 
+# kind of Journal Article, source Journal
+ENUM_GENRE_BOOK_REVIEW = Book Review
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_NOTE = Case Note
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_STUDY = Case Study
+
+ENUM_GENRE_COLLECTED_EDITION = Collected Edition
+
+ENUM_GENRE_COMMENTARY = Commentary 
+
 ENUM_GENRE_CONFERENCE_PAPER = Conference Paper 
 
 ENUM_GENRE_CONFERENCE_REPORT = Conference report
 
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary \u0009
+
+# kind of Book, source Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
+
 ENUM_GENRE_COURSEWARE_LECTURE = Teaching
+
+# kind of Journal Article, source Journal, Book
+ENUM_GENRE_EDITORIAL = Editorial
+
+ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_HANDBOOK = Handbook 
 
 ENUM_GENRE_ISSUE = Special Journal Issue
 
 ENUM_GENRE_JOURNAL = Journal
 
 ENUM_GENRE_MANUSCRIPT = Manuscript
+
+#
+# Jus-specific Source genres
+#
+ENUM_GENRE_MONOGRAPH = Monograph
+
+ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
+
+ENUM_GENRE_NEWSPAPER = Newspaper
+
+#Jus-specific Publication types BEGIN
+# source Newspaper
+ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
+
+# kind of Journal Article, source Journal or without source, can be published on a webpage
+ENUM_GENRE_OPINION = Opinion
 
 ENUM_GENRE_OTHER = Other
 
@@ -298,67 +351,9 @@ ENUM_GENRE_TALK_AT_EVENT = Talk
 
 ENUM_GENRE_THESIS = Thesis
 
-#Jus-specific Publication types BEGIN
-
-# source Newspaper
-ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_NOTE = Case Note
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_STUDY = Case Study
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_BOOK_REVIEW = Book Review
-
-# kind of Journal Article, source Journal or without source, can be published on a webpage
-ENUM_GENRE_OPINION = Opinion
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary 	
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
-
-# kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
-
-# kind of Journal Article, source Journal, Book
-ENUM_GENRE_EDITORIAL = Editorial
-
-#
-# Jus-specific Source genres
-#
-
-ENUM_GENRE_MONOGRAPH = Monograph
-
-ENUM_GENRE_NEWSPAPER = Newspaper
-
-ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
-
-ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
-
-ENUM_GENRE_COMMENTARY = Commentary 
-
-ENUM_GENRE_HANDBOOK = Handbook 
-
-ENUM_GENRE_COLLECTED_EDITION = Collected Edition
-
-ENUM_GENRE_FESTSCHRIFT = Festschrift
-
-source_identifier_type = Type of identifier
-
-source_identifier_value = Identifier value
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
-
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
@@ -451,9 +446,13 @@ ENUM_REVIEWMETHOD_NO_REVIEW = No review
 
 ENUM_REVIEWMETHOD_PEER = Peer
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = with file(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = with file(s) or locator(s)
 
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without file(s)
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = without files and locators
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = private
 
@@ -712,6 +711,11 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
+# JUS - Export-Format
+Export_ExportFormat_JUS = JUS
+
+Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
+
 Export_FileFormat_HTML = HTML
 
 Export_FileFormat_ODT = ODT
@@ -721,11 +725,6 @@ Export_FileFormat_PDF = PDF
 Export_FileFormat_RTF = RTF
 
 Export_FileFormat_SNIPPET = SNIPPET
-
-Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
-
-# JUS - Export-Format
-Export_ExportFormat_JUS = JUS
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
@@ -946,6 +945,8 @@ ViewItemFull_btnItemVersions = Release History
 
 ViewItemFull_lblAbstract = Abstract
 
+ViewItemFull_lblAbstractLanguage = Language of Abstract
+
 ViewItemFull_lblAddToBasket = Add to Basket
 
 ViewItemFull_lblAffiliations = Affiliations
@@ -1044,6 +1045,8 @@ ViewItemFull_lblLanguages = Language(s)
 
 ViewItemFull_lblLastModified = Last modified
 
+ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
+
 ViewItemFull_lblLinkSection = Item Details
 
 ViewItemFull_lblLocatorContentCategory = Content Category
@@ -1113,18 +1116,14 @@ ViewItemFull_lblSubHeaderEvent = Event
 ViewItemFull_lblSubHeaderFile = Files
 
 #
-# JUS
-#
-ViewItemFull_lblSubHeaderLegalCase = Legal Case
-
-ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
-
-ViewItemFull_lblAbstractLanguage = Language of Abstract
-
-#
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
+
+#
+# JUS
+#
+ViewItemFull_lblSubHeaderLegalCase = Legal Case
 
 ViewItemFull_lblSubHeaderLocalTags = Local Tags
 
@@ -1957,16 +1956,7 @@ event_start-date = Start date
 event_title = Title
 
 event_title_alternative = Alternative Title
-#
-# JUS-specific labels BEGIN
-#
-legal_case_title = Title
 
-legal_case_identifier = Case Reference Number 
-
-legal_case_date_published = Date
-
-legal_case_court_name = Court
 #
 # JUS-specific labels END
 #
@@ -1996,10 +1986,7 @@ g_creator_person_organization = Persons & Organizations
 g_details = Details
 
 g_events = Event
-#
-# JUS-specific labels BEGIN
-#
-g_legal_case = Legal Case
+
 #
 # JUS-specific labels END
 #
@@ -2010,6 +1997,11 @@ g_identifiers = Identifier
 g_item_basic = Basic
 
 g_item_degree = Degree Type
+
+#
+# JUS-specific labels BEGIN
+#
+g_legal_case = Legal Case
 
 g_locators = File Locators
 
@@ -2095,6 +2087,17 @@ item_title_alternative = Alternative Title
 item_total-number-of-pages = Total no. of pages
 
 lbl_noEntry = -
+
+legal_case_court_name = Court
+
+legal_case_date_published = Date
+
+legal_case_identifier = Case Reference Number 
+
+#
+# JUS-specific labels BEGIN
+#
+legal_case_title = Title
 
 locator_component_visibility = Visibility
 
@@ -2234,6 +2237,10 @@ source_end-page = Endpage
 
 source_genre = Genre
 
+source_identifier_type = Type of identifier
+
+source_identifier_value = Identifier value
+
 source_issue = Issue
 
 source_sequence_number = Sequence Number
@@ -2320,6 +2327,3 @@ viewItemFullPage = View Item
 warning_lblMessageHeader = System Messages and Warnings:
 
 yes = Yes
-
-ENUM_IDENTIFIERTYPE_ = n.a.
-
