--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -387,6 +387,10 @@ ENUM_REVIEWMETHOD_PEER = \u67FB\u8AAD\u3042\u308A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
+
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
+
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
 ENUM_SELECTCOMPONENTVISIBILITY_SELECT_COMPONENT_PRIVATE = \u975E\u516C\u958B
