--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -20,9 +20,9 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
-# für wissenschaftlich-technische Information mbH and Max-Planck-
-# Gesellschaft zur Förderung der Wissenschaft e.V.
+# Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
+# f?r wissenschaftlich-technische Information mbH and Max-Planck-
+# Gesellschaft zur F?rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
 AcceptItemPage = Accept Item
@@ -110,6 +110,22 @@ Basket_lblRemoveSelected = REMOVE FROM BASKET
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Actions:
+
+BrowseByChooseInitial = Choose Initial
+
+BrowseByCreator = Browse By Creator
+
+BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
+
+BrowseByInitial = Initial:
+
+BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
+
+BrowseByPage = Browse By
+
+BrowseBySelect = Choose Browse By
+
+BrowseBySubject = Browse By Subject
 
 #
 #CartItemsPage
@@ -247,6 +263,8 @@ ENUM_CRITERIA_STATE = State
 
 ENUM_CRITERIA_TITLE = Title
 
+ENUM_DEGREETYPE_BACHELOR = Bachelor
+
 ENUM_DEGREETYPE_DIPLOMA = Diploma
 
 ENUM_DEGREETYPE_HABILITATION = Habilitation
@@ -259,19 +277,27 @@ ENUM_DEGREETYPE_PHD = PHD
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
-ENUM_EMPTY = no entry
+ENUM_EMPTY = -
+
 
 #
 # Genre Types
 #
+
 ENUM_GENRE_ARTICLE = Journal Article
 
 ENUM_GENRE_BOOK = Book
 
 ENUM_GENRE_BOOK_ITEM = Book Chapter
 
+ENUM_GENRE_CONFERENCE_PAPER = Proceedings Paper
+
 # kind of Journal Article, source Journal
 ENUM_GENRE_BOOK_REVIEW = Book Review
+
+ENUM_GENRE_CONFERENCE_REPORT = Conference report
+
+ENUM_GENRE_COURSEWARE_LECTURE = Teaching
 
 # kind of Journal Article, source Journal
 ENUM_GENRE_CASE_NOTE = Case Note
@@ -354,6 +380,7 @@ ENUM_GENRE_THESIS = Thesis
 ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
+
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
@@ -532,7 +559,7 @@ EditItem_btRemoveSource = Remove Source
 
 EditItem_btSelect = select
 
-EditItem_btUpload = upload
+EditItem_btUpload = Upload
 
 EditItem_btUploadLocator = Upload linked file
 
@@ -638,7 +665,7 @@ EditItem_lblPubLanguage = Language of Publication
 
 EditItem_lblPublishing = Publishing
 
-EditItem_lblPublishingInfo = Publishing info
+EditItem_lblPublishingInfo = Publishing Info
 
 EditItem_lblRelation = Relation
 
@@ -652,7 +679,7 @@ EditItem_lblSource = Source
 
 EditItem_lblStartpage = Startpage
 
-EditItem_lblSubject = free keywords
+EditItem_lblSubject = Free keywords
 
 EditItem_lblTitleAndLanguage = Title and Language
 
@@ -711,6 +738,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
+Export_ExportFormat_XML = XML
+
+Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
+
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
@@ -724,7 +755,7 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = SNIPPET
+Export_FileFormat_SNIPPET = SNIPPET v5.x
 
 Feed_OrgUnit_Recent_Releases = Recent Releases of Organizational Unit 
 
@@ -746,11 +777,11 @@ Home_Header_Current = Current functionalities
 
 Home_Header_LastItems = Last Released Items
 
-Home_Header_LastItems_Disabled = LastItems feed disabled due non-productive environment
+Home_Header_LastItems_Disabled = Last items feed disabled due to non-productive environment
 
 Home_Header_News = Latest News on PubMan
 
-Home_Header_News_Disabled = News disabled due non-productive environment
+Home_Header_News_Disabled = News disabled due to non-productive environment
 
 #
 # HomePage
@@ -772,7 +803,7 @@ ItemList_Show = Showing
 #
 # ItemList
 #
-ItemList_SortBy = Sorting
+ItemList_SortBy = Sort by
 
 ItemList_SortOrderAscending = ascending
 
@@ -796,8 +827,6 @@ List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
 
-List_lblExportAllOptions = BASKET EXPORT
-
 List_lblExportOptions = EXPORT
 
 List_lblFilterOptions = FILTER
@@ -814,7 +843,7 @@ List_lblRevision = Revisions:
 
 List_lblSelectItem = Select Item
 
-List_lblSortOptions = SORTING
+List_lblSortOptions = SORT
 
 List_lblViewOptions = VIEW
 
@@ -1025,7 +1054,7 @@ ViewItemFull_lblHasRevision = Revision
 
 ViewItemFull_lblHideGroup = hide
 
-ViewItemFull_lblIdentifiers = Standard Identifiers
+ViewItemFull_lblIdentifiers = Identifiers
 
 ViewItemFull_lblIsAffiliatedTo = Affiliated to
 
@@ -1063,15 +1092,13 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Pages
 
-ViewItemFull_lblPublicationLocation = Publication Location
-
 ViewItemFull_lblPublishingInfo = Publishing info
 
 ViewItemFull_lblRelation = Relation
 
 ViewItemFull_lblReleased = , released
 
-ViewItemFull_lblRemoveFromBasket = Remove From Basket
+ViewItemFull_lblRemoveFromBasket = Remove from Basket
 
 ViewItemFull_lblRevisionMethod = Rev. Method
 
@@ -1133,7 +1160,7 @@ ViewItemFull_lblSubHeaderSource = Source
 
 ViewItemFull_lblSubHeaderSystemDetails = System Details
 
-ViewItemFull_lblSubject = free keywords
+ViewItemFull_lblSubject = Free keywords
 
 ViewItemFull_lblSystemIdentifiers = version ID
 
@@ -1288,7 +1315,7 @@ ViewItemRevisions_lblReleaseDate = Released:
 #
 # ViewItem Short
 #
-ViewItemShort_lblCreators = Creator(s)
+ViewItemShort_lblCreators = Creators
 
 ViewItemShort_lblDateAccepted = Accepted
 
@@ -1302,15 +1329,15 @@ ViewItemShort_lblDatePublishedOnline = Published online
 
 ViewItemShort_lblDateSubmitted = Submitted
 
-ViewItemShort_lblDates = Date(s)
+ViewItemShort_lblDates = Dates
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = File(s)
+ViewItemShort_lblFile = Files
 
 ViewItemShort_lblFileAttached = File
 
-ViewItemShort_lblFiles = File(s)
+ViewItemShort_lblFiles = Files
 
 ViewItemShort_lblFilesAttached = Files
 
@@ -1318,7 +1345,7 @@ ViewItemShort_lblGenre = Genre
 
 ViewItemShort_lblLess = Less
 
-ViewItemShort_lblLocator = Locator(s)
+ViewItemShort_lblLocator = Locators
 
 ViewItemShort_lblLocatorAttached = Locator
 
@@ -1448,7 +1475,7 @@ ViewItem_lblSourceVolume = Volume:
 
 ViewItem_lblSourceofSource = Source of source
 
-ViewItem_lblSubject1 = free keywords:
+ViewItem_lblSubject1 = Free keywords:
 
 ViewItem_lblTitle1 = Title:
 
@@ -1528,7 +1555,7 @@ actionMenu_lnkDelete = Delete
 
 actionMenu_lnkEdit = Edit
 
-actionMenu_lnkEditLocalTags = Edit local tags
+actionMenu_lnkEditLocalTags = Edit Local Tags
 
 actionMenu_lnkModify = Modify
 
@@ -1568,11 +1595,11 @@ adv_search_btStart = Start Search
 
 adv_search_fileComponentAvailability = Files & Locators
 
-adv_search_fileComponentEmbargoDate = has Embargo Date
+adv_search_fileComponentEmbargoDate = has embargo date
 
 adv_search_fileComponentVisibility = Visibility
 
-adv_search_fileContentCategory = content category
+adv_search_fileContentCategory = Content category
 
 adv_search_fileExcludeCategory = exclude category
 
@@ -1614,13 +1641,13 @@ adv_search_lblChkGenre_book = Book
 
 adv_search_lblChkGenre_bookitem = Book Chapter
 
-adv_search_lblChkGenre_conferencepap = Conference Paper 
+adv_search_lblChkGenre_conferencepap = Proceedings Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
 adv_search_lblChkGenre_courseware = Teaching
 
-adv_search_lblChkGenre_issue = Special Journal Issue
+adv_search_lblChkGenre_issue = Special Issue
 
 adv_search_lblChkGenre_journal = Journal
 
@@ -1751,6 +1778,8 @@ contact = Contact us
 
 creator_type = Type
 
+ddcDesc = Dewey Decimal Classification
+
 #
 # DepositorWS Itemstates
 #
@@ -1807,11 +1836,11 @@ easy_submission_lblBibtexPath = Path
 
 easy_submission_lblBibtexUpload = Upload
 
-easy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
+asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
 
 easy_submission_lblCollectionOfImportedItem2 = \ imported
 
-easy_submission_lblCollectionOfItem = This item will be part of the
+easy_submission_lblCollectionOfItem = This item will be part of 
 
 easy_submission_lblCopyrightDate = Copyright Date
 
@@ -1871,7 +1900,7 @@ easy_submission_lblIDValue = Identifier
 
 easy_submission_lblImportReferences = Import references in a structured format from a local folder here.
 
-easy_submission_lblKeywords = free Keywords
+easy_submission_lblKeywords = Free Keywords
 
 easy_submission_lblLicencingInfo = Licence
 
@@ -1987,6 +2016,7 @@ g_details = Details
 
 g_events = Event
 
+
 #
 # JUS-specific labels END
 #
@@ -2035,7 +2065,7 @@ import_workspace_status = Status
 
 import_workspace_submit_items = Submit
 
-import_workspace_submit_release_items = Submit&Release
+import_workspace_submit_release_items = Release
 
 import_workspace_title = Import workspace
 
@@ -2076,7 +2106,7 @@ item_published-online = Date published online
 
 item_review-method = Review type
 
-item_subject = free keywords
+item_subject = Free keywords
 
 item_table-of-contents = Table of content
 
@@ -2085,6 +2115,8 @@ item_title = Title
 item_title_alternative = Alternative Title
 
 item_total-number-of-pages = Total no. of pages
+
+lblSubject = Subject
 
 lbl_noEntry = -
 
@@ -2157,7 +2189,7 @@ multipleImport_dont_import_anything = If duplicates are detected, don't import a
 
 multipleImport_dont_import_duplicates = Don't import duplicate publications
 
-multipleImport_getMultipleRecords = Import multiple records
+multipleImport_getMultipleRecords = Import Multiple Items
 
 multipleImport_importFormat = Import format
 
@@ -2197,7 +2229,7 @@ qaws_lblCollectionSelection = Collection
 
 qaws_lblItemStateSelection = Item State
 
-qaws_lblMultipleImportTags = Import
+qaws_lblMultipleImportTags = Import Multiple Items
 
 qaws_lblOrgUnitSelection = Organizational Unit
 
@@ -2258,6 +2290,8 @@ source_volume = Volume
 #
 ss = \u00DF
 
+statistics_NIMSLink = Detailed statistics for NIMS items
+
 statistics_btnBack = Back
 
 statistics_lblAllFiles = Total
@@ -2285,11 +2319,11 @@ styleTheme_lblPubMan = PubMan
 
 submission_descEasySubmission = Using the easy submission one can enter stepwise information on a publication. At the end of the wizard one can save the item or switch to the full submission mask to add more details.
 
-submission_descImport = This functionality allows you to import a BibTeX file with one BibTeX reference or it allows you to fetch metadata and fulltext(s) from other systems like arXiv or PubMed Central.
+submission_descImport = This method allows you to import a single BibTeX reference or it allows you to fetch metadata and full text(s) from other systems like arXiv or PubMed Central.
 
-submission_descMultipleImport = This functionality allows you to import a BibTeX file with multiple BibTeX references or it allows you to fetch metadata (and fulltexts) from other systems like SPIRES or BioMed Central.
+submission_descMultipleImport = This method allows you to import multiple items in a structured format (e.g. EndNote, BibTex).
 
-submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Besides that one or more full texts can be uploaded and a locator to externally stored data (e.g. Supplementary Material) can be specified.
+submission_descNewSubmission = The full submission offers a genre specific entry mask for entering reference data. Additionally one or more full texts can be uploaded and information on externally stored data (e.g. Supplementary Material) can be specified.
 
 submission_lblAuthorCopyPaste = You can copy or write authors to this field which are then parsed and added automatically below after clicking the "Add" button.
 
@@ -2307,7 +2341,7 @@ submission_lnkImport = Import
 
 submission_lnkImportWorkspace = Import Workspace
 
-submission_lnkMultipleImport = Import multiple items
+submission_lnkMultipleImport = Import Multiple Items
 
 submission_lnkNewSubmission = Full Submission
 
