--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -21,7 +21,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -43,7 +43,7 @@ AcceptItem_lnkAccept = Akzeptieren
 
 AcceptItem_lnkCancel = Abbrechen
 
-AdvancedSearchPage = Erweiterte Suche
+AdvancedSearchPage = Detailsuche 
 
 AffiliationDetailAlternativeTitle = Alternativer Titel
 
@@ -51,7 +51,7 @@ AffiliationDetailDescription = Beschreibung
 
 AffiliationDetailDetails = Details
 
-AffiliationDetailIdentifier = Identifier
+AffiliationDetailIdentifier = Identifikator
 
 AffiliationDetailLocation = Organisationssitz
 
@@ -105,12 +105,28 @@ AudiencePage_numberOf = insgesamt
 
 AudiencePage_numberOfFiles = Dateien:
 
-Basket_lblRemoveSelected = VOM BASKET ENTFERNEN
+Basket_lblRemoveSelected = AUS BASKET ENTFERNEN
 
 #
 # Bread Crumb Navigation
 #
 BreadCrumb_info = Aktionen:
+
+BrowseByChooseInitial = W\u00E4hle Anfangsbuchstabe
+
+BrowseByCreator = Browse By Urheber
+
+BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
+
+BrowseByInitial = Anfangsbuchstabe:
+
+BrowseByOrgDesc = Browse by organizational unit names and view the corresponding items.
+
+BrowseByPage = Browse By
+
+BrowseBySelect = W\u00E4hle Browse By
+
+BrowseBySubject = Browse By Schlagwort
 
 #
 #CartItemsPage
@@ -167,7 +183,7 @@ ENUM_CONTENTCATEGORY_SUPPLEMENTARY_MATERIAL = Deprecated: erg\u00E4nzendes Mater
 
 ENUM_CONTENTCATEGORY_TABLE_OF_CONTENTS = Deprecated: Inhaltsverzeichnis
 
-ENUM_CONTENTCATEGORY_abstract = Abstract
+ENUM_CONTENTCATEGORY_abstract = Zusammenfassung
 
 ENUM_CONTENTCATEGORY_any-fulltext = beliebiger Volltext
 
@@ -181,13 +197,13 @@ ENUM_CONTENTCATEGORY_pre-print = Preprint
 
 ENUM_CONTENTCATEGORY_publisher-version = Verlagsversion
 
-ENUM_CONTENTCATEGORY_supplementary-material = erg\u00E4nzendes Material
+ENUM_CONTENTCATEGORY_supplementary-material = Erg\u00E4nzendes Material
 
 ENUM_CONTENTCATEGORY_table-of-contents = Inhaltsverzeichnis
 
 ENUM_CREATORROLE_ADVISOR = Ratgeber
 
-ENUM_CREATORROLE_ARTIST = Artist
+ENUM_CREATORROLE_ARTIST = K\u00FCnstler
 
 ENUM_CREATORROLE_AUTHOR = Autor
 
@@ -205,7 +221,7 @@ ENUM_CREATORROLE_PAINTER = Maler
 
 ENUM_CREATORROLE_PHOTOGRAPHER = Fotograf
 
-ENUM_CREATORROLE_REFEREE = Begutachter
+ENUM_CREATORROLE_REFEREE = Gutachter
 
 ENUM_CREATORROLE_TRANSCRIBER = Transkribierer
 
@@ -226,7 +242,7 @@ ENUM_CRITERIA_CREATOR = Urheber
 #
 ENUM_CRITERIA_DATE = Datum
 
-ENUM_CRITERIA_EVENT_TITLE = Name der Veranstalung
+ENUM_CRITERIA_EVENT_TITLE = Name der Veranstaltung
 
 ENUM_CRITERIA_FILE = Dateien
 
@@ -248,6 +264,8 @@ ENUM_CRITERIA_STATE = Status
 
 ENUM_CRITERIA_TITLE = Titel
 
+ENUM_DEGREETYPE_BACHELOR = Bachelor
+
 ENUM_DEGREETYPE_DIPLOMA = Diplom
 
 ENUM_DEGREETYPE_HABILITATION = Habilitation
@@ -260,11 +278,12 @@ ENUM_DEGREETYPE_PHD = Doktorarbeit
 
 ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
-ENUM_EMPTY = kein Eintrag
+ENUM_EMPTY = -
 
 #
 # Genre Types
 #
+
 ENUM_GENRE_ARTICLE = Zeitschriftenartikel
 
 ENUM_GENRE_BOOK = Buch
@@ -274,67 +293,15 @@ ENUM_GENRE_BOOK_ITEM = Buchkapitel
 # kind of Journal Article, source Journal
 ENUM_GENRE_BOOK_REVIEW = Rezension
 
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_STUDY = Fallbesprechung 
-
-ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
-
-ENUM_GENRE_COMMENTARY = Kommentar 
-
-ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
-
 ENUM_GENRE_CONFERENCE_REPORT = Konferenzbericht
 
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
-
-# kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
-
 ENUM_GENRE_COURSEWARE_LECTURE = Lehrmaterial
-
-# kind of Journal Article, source Journal, Book
-ENUM_GENRE_EDITORIAL = Editorial
-
-ENUM_GENRE_ENCYCLOPEDIA = Lexikon
-
-ENUM_GENRE_FESTSCHRIFT = Festschrift
-
-ENUM_GENRE_HANDBOOK = Handbuch
 
 ENUM_GENRE_ISSUE = Sonderheft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
-
-#
-# Jus-specific Source genres
-#
-ENUM_GENRE_MONOGRAPH = Monografie
-
-ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
-
-ENUM_GENRE_NEWSPAPER = Zeitung
-
-#Jus-specific genre types BEGIN
-# source Newspaper
-ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
-
-# kind of Journal Article, source Journal or without source, can be published on a webpage
-ENUM_GENRE_OPINION = Stellungnahme
 
 ENUM_GENRE_OTHER = Sonstige
 
@@ -353,6 +320,58 @@ ENUM_GENRE_TALK_AT_EVENT = Vortrag
 ENUM_GENRE_THESIS = Hochschulschrift
 
 ENUM_IDENTIFIERTYPE_ = n.a.
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_STUDY = Fallbesprechung 
+
+ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
+
+ENUM_GENRE_COMMENTARY = Kommentar 
+
+ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
+
+# kind of Book, source Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
+
+# kind of Journal Article, source Journal, Book
+ENUM_GENRE_EDITORIAL = Editorial
+
+ENUM_GENRE_ENCYCLOPEDIA = Lexikon
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_HANDBOOK = Handbuch
+
+#
+# Jus-specific Source genres
+#
+ENUM_GENRE_MONOGRAPH = Monografie
+
+ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
+
+ENUM_GENRE_NEWSPAPER = Zeitung
+
+#Jus-specific genre types BEGIN
+# source Newspaper
+ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
+
+# kind of Journal Article, source Journal or without source, can be published on a webpage
+ENUM_GENRE_OPINION = Stellungnahme
 
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
@@ -443,7 +462,7 @@ ENUM_MIMETYPE_VIDEO_MPG = video/mpeg
 
 ENUM_REVIEWMETHOD_INTERNAL = Interne Begutachtung
 
-ENUM_REVIEWMETHOD_NO_REVIEW = keine Begutachtung
+ENUM_REVIEWMETHOD_NO_REVIEW = Keine Begutachtung
 
 ENUM_REVIEWMETHOD_PEER = Expertenbegutachtung
 
@@ -486,7 +505,7 @@ ENUM_STATE_SUBMITTED = Eingestellt
 
 ENUM_STATE_WITHDRAWN = Zur\u00FCckgezogen
 
-ENUM_VISIBILITY_AUDIENCE = eingeschr\u00E4nkt
+ENUM_VISIBILITY_AUDIENCE = Eingeschr\u00E4nkt
 
 ENUM_VISIBILITY_PRIVATE = Privat
 
@@ -545,7 +564,7 @@ EditItem_btnSelectCCLicense = CC Lizenz ausw\u00E4hlen
 
 EditItem_btnSelectCCLicenseApply = \u00FCbernehmen
 
-EditItem_lblAbstract = Abstract
+EditItem_lblAbstract = Zusammenfassung
 
 EditItem_lblAddCreator = Urheber (Personen/Organisationen) hinzuf\u00FCgen
 
@@ -563,7 +582,7 @@ EditItem_lblContentRelation = Relation
 
 EditItem_lblContentRelationDescription = Beschreibung
 
-EditItem_lblContentRelationIdentifier = Identifier
+EditItem_lblContentRelationIdentifier = Identifikator
 
 EditItem_lblContentRelationType = Typ
 
@@ -645,7 +664,7 @@ EditItem_lblRelation = Relation
 
 EditItem_lblRights = Rechte
 
-EditItem_lblSequenceNumber = Sequence Number
+EditItem_lblSequenceNumber = Artikelnummer
 
 EditItem_lblSize = Gr\u00F6sse
 
@@ -712,6 +731,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
+Export_ExportFormat_XML = XML
+
+Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
+
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
@@ -725,7 +748,7 @@ Export_FileFormat_PDF = PDF
 
 Export_FileFormat_RTF = RTF
 
-Export_FileFormat_SNIPPET = SNIPPET
+Export_FileFormat_SNIPPET = SNIPPET v5.x
 
 Feed_OrgUnit_Recent_Releases = Neue PubMan Eintr\u00E4ge f\u00FCr die Organisation
 
@@ -773,7 +796,7 @@ ItemList_Show = Zeige
 #
 # ItemList
 #
-ItemList_SortBy = Sortierung
+ItemList_SortBy = Sortierung nach
 
 ItemList_SortOrderAscending = aufsteigend
 
@@ -795,7 +818,7 @@ List_ShortView = Kurzansicht (alle Datens\u00E4tze)
 
 List_lblAddToBasket = ZUM BASKET HINZUF\u00DCGEN
 
-List_lblBibList = Bibliographische Liste
+List_lblBibList = Bibliographisch
 
 List_lblExportAllOptions = BASKET EXPORT
 
@@ -807,7 +830,7 @@ List_lblGo = Los
 
 List_lblGoToPage = Gehe zu Seite
 
-List_lblGridList = Tabellarische Ansicht
+List_lblGridList = Tabellarisch
 
 List_lblPage = Seite
 
@@ -852,7 +875,7 @@ NoSearchResultsPage = Keine Treffer
 #
 # Quality Assurance / Moderator Workspace
 #
-QAWSPage = QA Arbeitsplatz
+QAWSPage = QA Bereich
 
 #
 #ReviseItem
@@ -944,7 +967,7 @@ ViewItemFull_btnItemStatistics = Statistiken
 
 ViewItemFull_btnItemVersions = Freigabegeschichte
 
-ViewItemFull_lblAbstract = Abstract
+ViewItemFull_lblAbstract = Zusammenfassung
 
 ViewItemFull_lblAbstractLanguage = Sprache des Abstracts
 
@@ -1026,7 +1049,7 @@ ViewItemFull_lblHasRevision = Revision
 
 ViewItemFull_lblHideGroup = ausblenden:
 
-ViewItemFull_lblIdentifiers = Standard-Identifiers
+ViewItemFull_lblIdentifiers = Identifikatoren
 
 ViewItemFull_lblIsAffiliatedTo = Zugeh\u00F6rig zu
 
@@ -1072,8 +1095,6 @@ ViewItemFull_lblNoEntry = -
 
 ViewItemFull_lblPages = Seiten
 
-ViewItemFull_lblPublicationLocation = Signatur
-
 ViewItemFull_lblPublishingInfo = Verlag, Ort, Ausgabe
 
 ViewItemFull_lblRelation = Relation
@@ -1104,13 +1125,13 @@ ViewItemFull_lblSourceEdition = Ausgabe
 
 ViewItemFull_lblSourceGenre = Genre der Quelle
 
-ViewItemFull_lblSourceIdentifier = Identifier
+ViewItemFull_lblSourceIdentifier = Identifikator
 
 ViewItemFull_lblSourcePlace = Ort
 
 ViewItemFull_lblSourcePubInfo = Verlag, Ort, Ausgabe
 
-ViewItemFull_lblSourceSequenceNo = Sequence Number
+ViewItemFull_lblSourceSequenceNo = Artikelnummer
 
 ViewItemFull_lblSourceStartEndPage = Start- / Endseite
 
@@ -1129,9 +1150,9 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
 
-ViewItemFull_lblSubHeaderLegalCase = Entscheidung
+ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
 
-ViewItemFull_lblSubHeaderLocalTags = lokale Tags
+ViewItemFull_lblSubHeaderLegalCase = Entscheidung
 
 ViewItemFull_lblSubHeaderLocators = Externe Referenzen
 
@@ -1223,7 +1244,7 @@ ViewItemMedium_lblPages = Gesamtseitenzahl
 
 ViewItemMedium_lblPublishingInfo = Verlag, Ort, Ausgabe
 
-ViewItemMedium_lblSequence = Sequence Number
+ViewItemMedium_lblSequence = Artikelnummer
 
 ViewItemMedium_lblSourceAffiliations = Affiliations
 
@@ -1237,13 +1258,13 @@ ViewItemMedium_lblSourceFurtherSources = es sind weitere Quellen vorhanden
 
 ViewItemMedium_lblSourceGenre = Genre der Quelle
 
-ViewItemMedium_lblSourceIdentifier = Identifier
+ViewItemMedium_lblSourceIdentifier = Identifikator
 
 ViewItemMedium_lblSourcePubInfo = Verlag, Ort, Ausgabe
 
 ViewItemMedium_lblSourcePublishingInfo = Verlag, Ort, Ausgabe d. Quelle
 
-ViewItemMedium_lblSourceSequenceNo = Sequence Number
+ViewItemMedium_lblSourceSequenceNo = Artikelnummer
 
 ViewItemMedium_lblSourceStartEndPage = Start- / Endseite
 
@@ -1312,11 +1333,11 @@ ViewItemShort_lblDates = Datum
 
 ViewItemShort_lblDetails = Details
 
-ViewItemShort_lblFile = Datei(en) 
+ViewItemShort_lblFile = Dateien 
 
 ViewItemShort_lblFileAttached = Datei
 
-ViewItemShort_lblFiles = Datei(en)
+ViewItemShort_lblFiles = Dateien
 
 ViewItemShort_lblFilesAttached = Dateien
 
@@ -1324,7 +1345,7 @@ ViewItemShort_lblGenre = Genre
 
 ViewItemShort_lblLess = Weniger
 
-ViewItemShort_lblLocator = externe Referenz(en)
+ViewItemShort_lblLocator = externe Referenzen
 
 ViewItemShort_lblLocatorAttached = ext. Referenz
 
@@ -1347,7 +1368,7 @@ ViewItem_btnNextItem1 = > n\u00E4chster Datensatz
 
 ViewItem_btnPreviousItem1 = < voriger Datensatz
 
-ViewItem_lblAbstract1 = Abstract:
+ViewItem_lblAbstract1 = Zusammenfassung:
 
 ViewItem_lblAffiliatedOrganization1 = zugeh\u00F6rige Organisation:
 
@@ -1401,7 +1422,7 @@ ViewItem_lblFileVisibility = Zugriffsebene:
 
 ViewItem_lblGenre1 = Genre:
 
-ViewItem_lblIdentifier1 = Identifier:
+ViewItem_lblIdentifier1 = Identifikator:
 
 ViewItem_lblItemBookmark = Lesezeichen:
 
@@ -1436,7 +1457,7 @@ ViewItem_lblSourceEdition = Ausgabe:
 
 ViewItem_lblSourceEndPage = Endseite: 
 
-ViewItem_lblSourceIdentifier = Identifier: 
+ViewItem_lblSourceIdentifier = Identifikator: 
 
 ViewItem_lblSourceIssue = Sonderheft: 
 
@@ -1444,7 +1465,7 @@ ViewItem_lblSourcePlace = Ort:
 
 ViewItem_lblSourcePublisher = Verlag:
 
-ViewItem_lblSourceSequenceNo = Sequence Number: 
+ViewItem_lblSourceSequenceNo = Artikelnummer: 
 
 ViewItem_lblSourceStartPage = Startseite: 
 
@@ -1537,7 +1558,7 @@ actionMenu_lnkDelete = L\u00F6schen
 
 actionMenu_lnkEdit = Bearbeiten
 
-actionMenu_lnkEditLocalTags = lokale Tags bearbeiten
+actionMenu_lnkEditLocalTags = Lokale Tags bearbeiten
 
 actionMenu_lnkModify = \u00C4ndern
 
@@ -1599,7 +1620,7 @@ adv_search_lbHeaderFiles = Dateien & ext. Referenzen
 
 adv_search_lbHeaderGenre = Genre
 
-adv_search_lbHeaderIdent = Identifier
+adv_search_lbHeaderIdent = Identifikator
 
 adv_search_lbHeaderLanguage = Sprache der Publikation
 
@@ -1612,7 +1633,7 @@ adv_search_lbHeaderPerson = Person
 adv_search_lbHeaderSource = Quelle
 
 #Headers
-adv_search_lbHeaderWoP = Wort oder Phrase
+adv_search_lbHeaderWoP = Wort oder Ausdruck
 
 #Genre (deprecated)
 adv_search_lblChkGenre = Genres
@@ -1760,6 +1781,8 @@ contact = Kontakt
 
 creator_type = Typ
 
+ddcDesc = Dewey-Dezimalklassifikation
+
 #
 # DepositorWS Itemstates
 #
@@ -1810,7 +1833,7 @@ easy_submission_btnSave = Speichern
 
 easy_submission_btnUploadFile = Datei hochladen
 
-easy_submission_lblAbstract = Abstract
+easy_submission_lblAbstract = Zusammenfassung
 
 easy_submission_lblBibtexPath = Pfad
 
@@ -1876,7 +1899,7 @@ easy_submission_lblIDTypeArxiv = arXiv ID
 
 easy_submission_lblIDTypeEscidoc = eSciDoc ID
 
-easy_submission_lblIDValue = Identifier
+easy_submission_lblIDValue = Identifikator
 
 easy_submission_lblImportReferences = Hier k\u00F6nnen Sie eine BibTeX-Datei von Ihrem Rechner importieren.
 
@@ -1998,7 +2021,7 @@ g_events = Veranstaltung
 #
 g_files = Datei
 
-g_identifiers = Identifier
+g_identifiers = Identifikator
 
 g_item_basic = Basisdaten
 
@@ -2015,7 +2038,7 @@ g_select_roles = Rolle d. Urhebers
 
 g_source_basic = Quelle
 
-g_source_identifiers = Identifier
+g_source_identifiers = Identifikator
 
 g_source_volume_issue_pages = Details zur Quelle
 
@@ -2041,7 +2064,7 @@ import_workspace_status = Status
 
 import_workspace_submit_items = Einstellen
 
-import_workspace_submit_release_items = Einstellen&freigeben
+import_workspace_submit_release_items = Freigeben
 
 import_workspace_title = Import Bereich
 
@@ -2052,7 +2075,7 @@ info_lblMessageHeader = Systemnachrichten:
 
 informative_message = Informativ:
 
-item_abstract = Abstract
+item_abstract = Zusammenfassung
 
 item_basic_label = Basisdaten
 
@@ -2070,9 +2093,9 @@ item_degree = Abschluss
 
 item_genre = Genre
 
-item_identifier_type = Art des Identifier
+item_identifier_type = Art des Identifikators
 
-item_identifier_value = Wert des Identifier
+item_identifier_value = Wert des Identifikators
 
 item_language = Sprache der Publikation
 
@@ -2091,6 +2114,8 @@ item_title = Titel
 item_title_alternative = Alternativer Titel
 
 item_total-number-of-pages = Gesamtseitenzahl
+
+lblSubject = Schlagwort
 
 lbl_noEntry = -
 
@@ -2220,7 +2245,7 @@ save = Speichern
 
 search_btSearch = Los
 
-search_lblAdvancedSearch = Erweiterte Suche
+search_lblAdvancedSearch = Detailsuche
 
 search_lblAdvancedSearch_noresults = Erweiterte Suche
 
@@ -2249,7 +2274,7 @@ source_identifier_value = Wert des Identifier
 
 source_issue = Heftnummer
 
-source_sequence_number = Sequence Number
+source_sequence_number = Artikelnummer
 
 source_start-page = Startseite
 
@@ -2263,6 +2288,8 @@ source_volume = Band
 # for cut&paste
 #
 ss = \u00DF
+
+statistics_NIMSLink = Detaillierte Statistiken f\u00FCr NIMS Datens\u00E4tze
 
 statistics_btnBack = Zur\u00FCck
 
@@ -2293,7 +2320,7 @@ submission_descEasySubmission = \u00DCber die einfache Dateneingabe k\u00F6nnen 
 
 submission_descImport = Diese Funktion bietet zum einen den Import einer Datei, die einen BibTeX Eintrag enth\u00E4lt, zum anderen kann man hier Metadaten und Volltext(e) aus anderen Systemen, wie arXiv oder PubMed Central in die eSciDoc Eingabemaske laden.
 
-submission_descMultipleImport = Diese Funktion bietet zum einen den Import einer Datei, die mehrere BibTeX Eintr\u00E4ge enth\u00E4lt, zum anderen kann man hier Metadaten (und Volltexte) aus anderen Systemen, wie SPIRES oder BioMed Central in die eSciDoc Eingabemaske laden.
+submission_descMultipleImport = Diese Methode erlaubt Ihnen mehrere Items in einem strukturierten Format hochzuladen (z.B. EndNote, BibTex).
 
 submission_descNewSubmission = Die detaillierte Eingabemaske bietet eine dokumentenspezifische Maske zur Eingabe von Publikationsdaten. Des weiteren k\u00F6nnen ein oder mehrere Volltexte hochgeladen werden, sowie eine URL zu extern abgelegtem Material (z.b. Supplementary Material) gesetzt werden.
 
@@ -2316,6 +2343,8 @@ submission_lnkImportWorkspace = Import Bereich
 submission_lnkMultipleImport = Massenimport
 
 submission_lnkNewSubmission = Detaillierte Eingabe
+
+test = =
 
 #
 # Title
